app/globals.css
@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;600;700;800;900&display=swap");
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";
@theme inline {
    --font-figtree: "Figtree", sans-serif;
    --font-mono: "JetBrains Mono", monospace;

    --color-background: #121212;
    --color-secondary-background: #1e1e1e;
    --color-primary: #ff1621;
    --color-text: #d1d1d1;
    --color-muted-text: #414141;
    --color-semi-muted-text: #7d7d7d;
}

body {
    @apply bg-background text-text font-figtree;
}

.responsive-container {
    @apply mx-auto w-[95%] md:w-[85%] lg:w-[70%];
}
.hero-heading {
    @apply text-[14vw] leading-none uppercase font-semibold mb-3 text-white tracking-tighter text-center md:text-left;
}
.hero-subheading {
    @apply text-muted-text text-[3vw] tracking-tight font-medium text-center md:text-left;
}

